# ibm-hr-analytics-hub

./: .gitignore  DECISIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
data/processed/: hr_employee_attrition_enriched.csv  predicted_attrition_risk.csv  survival_model_coefficients.csv  survival_model_metrics.json  synthetic_hiring_pipeline.csv
docs/: ph_assumptions_check.txt  sql_findings.md  survival_model_findings.md
notebooks/: 01_exploratory_data_analysis.ipynb
reports/: HR_Executive_Report.xlsx
sql/: schema.sql
sql/queries/: 01_overall_attrition_rate.sql  02_attrition_by_department_and_role.sql  03_attrition_by_overtime.sql  04_income_percentile_by_job_role.sql  05_tenure_buckets_vs_attrition.sql  06_satisfaction_scores_vs_attrition.sql  07_current_employee_flight_risk_ranking.sql  08_time_to_hire_by_department_and_level.sql  09_attrition_rate_by_time_to_hire_bucket.sql  10_monthly_hiring_trend.sql
sql/results/: 01_overall_attrition_rate.csv  02_attrition_by_department_and_role.csv  03_attrition_by_overtime.csv  04_income_percentile_by_job_role.csv  05_tenure_buckets_vs_attrition.csv  06_satisfaction_scores_vs_attrition.csv  07_current_employee_flight_risk_ranking.csv  08_time_to_hire_by_department_and_level.csv  09_attrition_rate_by_time_to_hire_bucket.csv  (+1 more)
tests/: conftest.py  test_chat_agent.py  test_chat_context.py  test_excel_report.py  test_llm_providers.py  test_load_db.py  test_rag.py  test_sql_queries.py  test_sql_tool.py  test_survival_model.py  test_synthetic_hiring.py
(+10 files in other folders)
