[project]
name = "hr-analytics-hub"
version = "0.1.0"
description = "End-to-end people analytics pipeline built on the IBM HR Analytics Employee Attrition dataset"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "lifelines>=0.30.3",
    "matplotlib>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hr_analytics"]
