[project]
name = "hr-analytics-hub"
version = "0.1.0"
description = "End-to-end people analytics pipeline built on the IBM HR Analytics Employee Attrition dataset"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "lifelines>=0.30.3",
    "matplotlib>=3.11.0",
    "streamlit>=1.58.0",
    "plotly>=6.8.0",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hr_analytics"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "nbclient>=0.11.0",
    "pytest>=9.1.1",
    "seaborn>=0.13.2",
]
